--- a/index.html
+++ b/index.html
@@ -5,6 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech-Hub 0.1</title>
+    <!-- boostrap cdn lind added  -->
+    <link
+      rel="stylesheet"
+      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <!-- header section start  -->
+    <header>
+      <!------ navbar start  ----->
+      <nav class="navbar navbar-expand-lg">
+        <div class="container mt-4">
+          <!-- navbar band  -->
+          <a class="navbar-brand fs-4 fw-bold" href="#">
+            <img style="width: 35px" src="./images/tech.png" alt="" />Tech-Hub
+            0.1
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarScroll"
+            aria-controls="navbarScroll"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarScroll">
+            <!-- navbar ul  -->
+            <ul
+              class="navbar-nav my-2 ms-auto mt-2 my-lg-0"
+              style="--bs-scroll-height: 100px"
+            >
+              <li class="nav-item ms-5">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item mx-3">
+                <a class="nav-link" href="#">Courses</a>
+              </li>
+              <li class="nav-item mx-3">
+                <a class="nav-link">Deals</a>
+              </li>
+              <li class="nav-item mx-3">
+                <a class="nav-link">Success</a>
+              </li>
+              <li class="nav-item mx-3">
+                <a class="nav-link">About</a>
+              </li>
+              <li class="nav-item mx-3">
+                <a class="nav-link">Register</a>
+              </li>
+              <button class="btn btn-outline-info fw-bold ms-4" type="submit">
+                Register
+              </button>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!------ navbar start  ----->
+    </header>
+
+    <!---- header section start ---->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
