banner header is done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       rel="stylesheet"
       href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
+    <!-- external css link added  -->
+    <link rel="stylesheet" href="styles.css" />
+    />
   </head>
   <body>
     <!-- header section start  -->
@@ -64,7 +67,92 @@
           </div>
         </div>
       </nav>
-      <!------ navbar start  ----->
+      <!-------- navbar end  ------>
+      <!------ header banner section start ------->
+      <section class="container mt-5">
+        <div
+          id="carouselExampleFade"
+          class="carousel slide carousel-fade"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active tech-cover-img">
+              <img
+                src="images/cover/cover1.png"
+                class="d-block w-100"
+                alt="..."
+              />
+              <!-- banner discription  -->
+              <div
+                class="carousel-caption d-md-block position-absolute top-50 start-25 translate-middle-y"
+              >
+                <h1 class="display-1 tech-header">
+                  Get Started Digital Learning
+                </h1>
+                <p class="fw-lighter">
+                  We are provide better service and experiences
+                </p>
+                <button class="btn tech-btn">Get started</button>
+              </div>
+            </div>
+            <div class="carousel-item tech-cover-img">
+              <img
+                src="./images/cover/cover2.png"
+                class="d-block w-100"
+                alt="..."
+              />
+              <!-- banner discription  -->
+              <div
+                class="carousel-caption d-md-block position-absolute top-50 start-25 translate-middle-y"
+              >
+                <h1 class="display-1 tech-header">Discover Your talent now</h1>
+                <p class="fw-lighter">
+                  We are provide better service and experiences
+                </p>
+                <button class="btn tech-btn">Get started</button>
+              </div>
+            </div>
+            <div class="carousel-item tech-cover-img">
+              <img
+                src="./images/cover/cover3.png"
+                class="d-block w-100"
+                alt="..."
+              />
+              <!-- banner discription  -->
+              <div
+                class="carousel-caption d-md-block position-absolute top-50 start-25 translate-middle-y"
+              >
+                <h1 class="display-1 tech-header">
+                  Get Support 24 hours By us
+                </h1>
+                <p class="fw-lighter">
+                  We are provide better service and experiences
+                </p>
+                <button class="btn tech-btn">Get started</button>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleFade"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleFade"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+      <!------ header banner section end ------->
     </header>
 
     <!---- header section start ---->
