popular course section is added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     />
     <!-- external css link added  -->
     <link rel="stylesheet" href="styles.css" />
-    />
   </head>
   <body>
     <!-- header section start  -->
@@ -154,9 +153,128 @@
       </section>
       <!------ header banner section end ------->
     </header>
-
-    <!---- header section start ---->
-
+    <!---- header section end ---->
+    <!----==== main section start ====---->
+    <main>
+      <!-- popular course section start -->
+      <section class="container mt-5">
+        <div class="m-auto">
+          <h2 class="text-center fw-bold">
+            Discover Our Popular <br />
+            Courses
+          </h2>
+          <p class="text-center fw-lighter">
+            Nothing stops the man who desires to <br />
+            achieve
+          </p>
+        </div>
+        <div class="container">
+          <div class="row g-4">
+            <!-- course-1  -->
+            <div class="col-lg-6">
+              <div
+                class="shadow d-flex flex-column flex-md-row align-items-center border rounded custom-object-fit"
+              >
+                <img src="./images/course/course-1.png" alt="" />
+                <div class="ms-5 mt-3">
+                  <h3>Fundamental Of UI/UX Design</h3>
+                  <p>
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <h4 class="text-primary">Price : 20$</h4>
+                </div>
+              </div>
+            </div>
+            <!-- course-2  -->
+            <div class="col-lg-6">
+              <div
+                class="shadow d-flex flex-column flex-md-row align-items-center border rounded custom-object-fit"
+              >
+                <img src="./images/course/course-2.png" alt="" />
+                <div class="ms-5 mt-3">
+                  <h3>Javascript Basic to advanced</h3>
+                  <p>
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <h4 class="text-primary">Price : 20$</h4>
+                </div>
+              </div>
+            </div>
+            <!-- course-3  -->
+            <div class="col-lg-6">
+              <div
+                class="shadow d-flex flex-column flex-md-row align-items-center border rounded custom-object-fit"
+              >
+                <img src="./images/course/course-3.png" alt="" />
+                <div class="ms-5 mt-3">
+                  <h3>Fullstack Web Development</h3>
+                  <p>
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <h4 class="text-primary">Price : 20$</h4>
+                </div>
+              </div>
+            </div>
+            <!-- course-4  -->
+            <div class="col-lg-6">
+              <div
+                class="shadow d-flex flex-column flex-md-row align-items-center border rounded custom-object-fit"
+              >
+                <img src="./images/course/course-4.png" alt="" />
+                <div class="ms-5 mt-3">
+                  <h3>Digital Marketing</h3>
+                  <p>
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <h4 class="text-primary">Price : 20$</h4>
+                </div>
+              </div>
+            </div>
+            <!-- course-5  -->
+            <div class="col-lg-6">
+              <div
+                class="shadow d-flex flex-column flex-md-row align-items-center border rounded custom-object-fit"
+              >
+                <img src="./images/course/course-5.png" alt="" />
+                <div class="ms-5 mt-3">
+                  <h3>Photography Basic Rules</h3>
+                  <p>
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <h4 class="text-primary">Price : 20$</h4>
+                </div>
+              </div>
+            </div>
+            <!-- course-6  -->
+            <div class="col-lg-6">
+              <div
+                class="shadow d-flex flex-column flex-md-row align-items-center border rounded custom-object-fit"
+              >
+                <img src="./images/course/course-6.png" alt="" />
+                <div class="ms-5 mt-3">
+                  <h3>Motion Graphics</h3>
+                  <p>
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card.
+                  </p>
+                  <h4 class="text-primary">Price : 20$</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="mt-5 text-center">
+          <button class="btn tech-btn mx-auto">See More Courses</button>
+        </div>
+      </section>
+      <!-- popular course section end -->
+    </main>
+    <!----==== main section end ====---->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
