--- a/index.html
+++ b/index.html
@@ -273,6 +273,44 @@
         </div>
       </section>
       <!-- popular course section end -->
+      <!-- Expolore section section start -->
+      <section class="container mt-5">
+        <div class="row border rounded tech-explore-bg pl-0">
+          <div class="col-lg-6">
+            <img class="w-100" src="./images/working.png" alt="" />
+          </div>
+          <div class="col-lg-6 my-auto p-5">
+            <h2>Explore The elearning Institute</h2>
+            <p class="fw-lighter">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+              slightly believable. If you are going to use a passage of Lorem
+              Ipsum, you need to be sure. <br />
+              <br />
+              Anything embarrassing hidden in the middle of text. All the Lorem
+              Ipsum generators on the Internet tend to repeat predefined.
+            </p>
+            <div class="d-flex justify-content-between mt-3">
+              <div>
+                <h1 class="fw-bold">3.2K+</h1>
+                <p>Online Course</p>
+              </div>
+
+              <div>
+                <h1 class="fw-bold">600+</h1>
+                <p>Expert member</p>
+              </div>
+              <div>
+                <h1 class="fw-bold">1k+</h1>
+                <p>Rating & Review</p>
+              </div>
+            </div>
+            <button class="btn tech-btn mt-5">Read more</button>
+          </div>
+        </div>
+      </section>
+      <!-- Expolore section section end -->
     </main>
     <!----==== main section end ====---->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
