--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
       <!-- popular course section end -->
       <!-- Expolore section section start -->
       <section class="container mt-5">
-        <div class="row border rounded tech-explore-bg pl-0">
-          <div class="col-lg-6">
+        <div class="row border rounded pl-0 tech-explore-bg">
+          <div class="col-lg-6 p-0">
             <img class="w-100" src="./images/working.png" alt="" />
           </div>
           <div class="col-lg-6 my-auto p-5">
@@ -310,7 +310,55 @@
           </div>
         </div>
       </section>
-      <!-- Expolore section section end -->
+      <!----- Expolore section section end ----->
+      <!------ registraion section start ------>
+      <section class="container mt-5">
+        <div style="height: 250px" class="row mt-5 tech-register-bg">
+          <div class="col-lg-6 text-center my-auto text-white">
+            <h1 class="fs-1">Ready to join?</h1>
+            <p class="fs-6">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+          <!-- registraion btn -->
+          <div class="col-lg-6 text-center my-auto">
+            <button
+              class="btn tech-btn-register"
+              data-bs-target="#modalID"
+              data-bs-toggle="modal"
+            >
+              Register now
+            </button>
+            <!----- modal  ---->
+            <div class="modal fade" id="modalID">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h3 class="modal-title text-primary">
+                      Hello! wellcome to Tech-Hub 0.1
+                    </h3>
+                    <button class="btn-close" data-bs-dismiss="modal"></button>
+                  </div>
+                  <div class="modal-body">
+                    <p>
+                      Your are now member of Tech-hub 0.1 | We will notify you
+                      shortly
+                    </p>
+                  </div>
+                  <div class="modal-footer">
+                    <button class="btn btn-secondary" data-bs-dismiss="modal">
+                      close
+                    </button>
+                    <button class="btn btn-primary">Save</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- registraion section end -->
     </main>
     <!----==== main section end ====---->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
