--- a/index.html
+++ b/index.html
@@ -358,7 +358,61 @@
           </div>
         </div>
       </section>
-      <!-- registraion section end -->
+      <!------ registraion section end ------>
+      <!----- student section start ------>
+      <section class="container mt-5">
+        <div class="w-50 text-start">
+          <h2 class="fs-1 fw-bold">Meet Our Successfull Students</h2>
+          <p class="fs-6">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+        </div>
+        <!-- Our students -->
+        <div class="row mt-5">
+          <!-- student-1  -->
+          <div class="col-lg-3 col-md-6">
+            <div class="shadow-lg">
+              <img class="w-100" src="./images/student/student-1.png" alt="" />
+              <div class="container py-1 m-4">
+                <h5 class="fw-bold">Awlad Hossain</h5>
+                <p class="fw-lighter text-dark">UIUX Designer</p>
+              </div>
+            </div>
+          </div>
+          <!-- student-2  -->
+          <div class="col-lg-3 col-md-6">
+            <div class="shadow-lg">
+              <img class="w-100" src="./images/student/student-2.png" alt="" />
+              <div class="container py-1 m-4">
+                <h5 class="fw-bold">Jannatul Islam</h5>
+                <p class="fw-lighter text-dark">Motion Designer</p>
+              </div>
+            </div>
+          </div>
+          <!-- student-3  -->
+          <div class="col-lg-3 col-md-6">
+            <div class="shadow-lg">
+              <img class="w-100" src="./images/student/student-3.png" alt="" />
+              <div class="container py-1 m-4">
+                <h5 class="fw-bold">Imran Hossain</h5>
+                <p class="fw-lighter text-dark">Graphic Designer</p>
+              </div>
+            </div>
+          </div>
+          <!-- student-4  -->
+          <div class="col-lg-3 col-md-6">
+            <div class="shadow-lg">
+              <img class="w-100" src="./images/student/student-4.png" alt="" />
+              <div class="container py-1 m-4">
+                <h5 class="fw-bold">Nishi Gomej</h5>
+                <p class="fw-lighter text-dark">Web Developer</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!----- student section end ------>
     </main>
     <!----==== main section end ====---->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
