--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     />
     <!-- external css link added  -->
     <link rel="stylesheet" href="styles.css" />
+    <!-- font awesome kit link added  -->
+    <script
+      src="https://kit.fontawesome.com/b790da7711.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- header section start  -->
@@ -410,9 +415,93 @@
               </div>
             </div>
           </div>
+          <div class="mt-5 text-center">
+            <button class="btn tech-btn mx-auto">View All</button>
+          </div>
         </div>
       </section>
       <!----- student section end ------>
+      <!----- student feedback section  start------>
+      <section class="container mt-5">
+        <div class="text-center">
+          <h2 class="fs-1 fw-bold">Some Students Feedback</h2>
+          <p class="fs-6">
+            It is a long established fact that a reader will be distracted
+            <br />
+          </p>
+        </div>
+        <div class="row mt-5 g-3">
+          <!-- feedback 1 -->
+          <div class="col-lg-6 custom-box">
+            <div class="shadow-lg p-4">
+              <div class="d-flex justify-content-between">
+                <div><img src="./images/comma.png" alt="" /></div>
+                <div>
+                  <i class="fa fa-light fa-star icon-filled"></i>
+                  <i class="fa fa-light fa-star icon-filled"></i>
+                  <i class="fa fa-light fa-star icon-filled"></i>
+                  <i class="fa fa-light fa-star icon-filled"></i>
+                  <i class="fa fa-light fa-star-half-stroke icon-filled"></i>
+                </div>
+              </div>
+              <div class="mt-2">
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable. If you are going to use a passage of
+                  Lorem.
+                </p>
+              </div>
+              <div class="d-flex">
+                <img src="./images/student/student-5.png" alt="" />
+                <div class="ms-2">
+                  <h6 class="fw-bold">Ananta jolil</h6>
+                  <p>UI/UX Designer</p>
+                </div>
+              </div>
+            </div>
+            <div class="tech-arrow-box d-none d-lg-block">
+              <i class="fa fa-light fa-circle-chevron-left arrow-icon"></i>
+            </div>
+          </div>
+          <!-- feedback 2 -->
+          <div class="col-lg-6 custom-box">
+            <div class="shadow-lg p-4">
+              <div class="d-flex justify-content-between">
+                <div><img src="./images/comma.png" alt="" /></div>
+                <div>
+                  <i class="fa fa-light fa-star icon-filled"></i>
+                  <i class="fa fa-light fa-star icon-filled"></i>
+                  <i class="fa fa-light fa-star icon-filled"></i>
+                  <i class="fa fa-light fa-star icon-filled"></i>
+                  <i class="fa fa-light fa-star-half-stroke icon-filled"></i>
+                </div>
+              </div>
+              <div class="mt-2">
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable. If you are going to use a passage of
+                  Lorem.
+                </p>
+              </div>
+              <div class="d-flex">
+                <img src="./images/student/student-5.png" alt="" />
+                <div class="ms-2">
+                  <h6 class="fw-bold">Ananta jolil</h6>
+                  <p>UI/UX Designer</p>
+                </div>
+              </div>
+            </div>
+            <div class="tech-arrow-box-2 d-none d-lg-block">
+              <i class="fa-solid fa-circle-chevron-right arrow-icon"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!----- student feedback section  end------>
     </main>
     <!----==== main section end ====---->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
