--- a/index.html
+++ b/index.html
@@ -488,9 +488,9 @@
                 </p>
               </div>
               <div class="d-flex">
-                <img src="./images/student/student-5.png" alt="" />
+                <img src="./images/student/student-6.png" alt="" />
                 <div class="ms-2">
-                  <h6 class="fw-bold">Ananta jolil</h6>
+                  <h6 class="fw-bold">Shanta vanila</h6>
                   <p>UI/UX Designer</p>
                 </div>
               </div>
@@ -502,6 +502,152 @@
         </div>
       </section>
       <!----- student feedback section  end------>
+      <!----- frequently qustion section  start------>
+      <section class="container mt-5">
+        <div class="text-center">
+          <h2 class="fs-1 fw-bold">Frequently Asked Questions</h2>
+          <p class="fs-6">
+            It is a long established fact that a reader will be distracted
+            <br />
+          </p>
+        </div>
+        <div
+          class="accordion w-75 mx-auto mt-5"
+          id="accordionPanelsStayOpenExample"
+        >
+          <!-- qustion 1 -->
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+              <button
+                class="accordion-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseOne"
+                aria-expanded="true"
+                aria-controls="panelsStayOpen-collapseOne"
+              >
+                What is the different between flex and grid ?
+              </button>
+            </h2>
+            <div
+              id="panelsStayOpen-collapseOne"
+              class="accordion-collapse collapse show"
+              aria-labelledby="panelsStayOpen-headingOne"
+            >
+              <div class="accordion-body">
+                <p class="fw-6 fw-lighter">
+                  The basic difference between CSS Grid Layout and CSS Flexbox
+                  Layout is that flexbox was designed for layout in one
+                  dimension - either a row or a column. Grid was designed for
+                  two-dimensional layout - rows, and columns at the same time
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- qustion 2  -->
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseTwo"
+                aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseTwo"
+              >
+                What is difference between bootstrap and tailwind ?
+              </button>
+            </h2>
+            <div
+              id="panelsStayOpen-collapseTwo"
+              class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingTwo"
+            >
+              <div class="accordion-body">
+                <p class="fw-lighter">
+                  Bootstrap's utility and layout classes provide you with
+                  everything you need to style a responsive webpage. With
+                  Tailwind, however, you are much more involved in styling the
+                  webpage because you end up having to create your own
+                  components using the utility classes that the framework
+                  offers.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- qustion -3  -->
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseThree"
+                aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseThree"
+              >
+                What is css box model ?
+              </button>
+            </h2>
+            <div
+              id="panelsStayOpen-collapseThree"
+              class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingThree"
+            >
+              <div class="accordion-body">
+                In CSS, the term "box model" is used when talking about design
+                and layout.The CSS box model is essentially a box that wraps
+                around every HTML element. It consists of: margins, borders,
+                padding, and the actual content. The image below illustrates the
+                box model:
+              </div>
+            </div>
+          </div>
+          <!-- qusiton-4  -->
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseThree"
+                aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseThree"
+              >
+                What is semantic tag ?
+              </button>
+            </h2>
+            <div
+              id="panelsStayOpen-collapseThree"
+              class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingThree"
+            >
+              <div class="accordion-body">
+                The HTML semantics refers to the tags that provide meaning to an
+                HTML page rather than just presentation. It makes HTML more
+                comprehensible by better defining the different sections and
+                layout of web pages.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!----- frequently qustion section  end------>
+      <!-----  our companies section  start------>
+      <section class="container mt-5 d-none d-lg-block">
+        <div class="text-center">
+          <h2 class="fs-1 fw-bold mt-5">Trusted by over 800+ companies</h2>
+        </div>
+        <div style="height: 25px" class="d-flex justify-content-between mt-5">
+          <img src="./images/company/company-1.png" alt="" />
+          <img src="./images/company/company-2.png" alt="" />
+          <img src="./images/company/company-3.png" alt="" />
+          <img src="./images/company/company-4.png" alt="" />
+          <img src="./images/company/company-5.png" alt="" />
+          <img src="./images/company/company-6.png" alt="" />
+        </div>
+      </section>
+      <!----- oue compamies section  start------>
     </main>
     <!----==== main section end ====---->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
