footer is added

--- a/index.html
+++ b/index.html
@@ -650,6 +650,38 @@
       <!----- oue compamies section  start------>
     </main>
     <!----==== main section end ====---->
+    <!----============= footer section start ==============---->
+    <footer class="mt-5">
+      <div class="footer-bg d-flex align-items-center justify-content-center">
+        <div>
+          <div class="w-100 text-center text-white">
+            <h2 class="fs-1 fw-bold">Tech-Hub 0.1</h2>
+            <p class="fw-lighter">
+              Office 41, Zawaya Buildin, Ghala Muscat, Sultanate of Oman
+            </p>
+            <p class="fw-lighter">Privacy Ploicy | Terms of use</p>
+            <div class="text-center">
+              <a
+                href="https://www.instagram.com/nahid_frahaman/?hl=en"
+                target="_blank"
+              >
+                <i class="fa fa-brands fa-instagram ms-2"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/naimur-rahaman-033a27237/"
+                target="_blank"
+              >
+                <i class="fa fa-brands fa-linkedin ms-2"></i
+              ></a>
+              <a href=""> <i class="fa fa-brands fa-twitter ms-2"></i></a>
+              <a href=""><i class="fa-brands fa-reddit ms-2"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!----============= footer section end  ============---->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
