recheck is done

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <div class="row mt-5">
           <!-- student-1  -->
           <div class="col-lg-3 col-md-6">
-            <div class="shadow-lg">
+            <div class="shadow">
               <img class="w-100" src="./images/student/student-1.png" alt="" />
               <div class="container py-1 m-4">
                 <h5 class="fw-bold">Awlad Hossain</h5>
@@ -387,7 +387,7 @@
           </div>
           <!-- student-2  -->
           <div class="col-lg-3 col-md-6">
-            <div class="shadow-lg">
+            <div class="shadow">
               <img class="w-100" src="./images/student/student-2.png" alt="" />
               <div class="container py-1 m-4">
                 <h5 class="fw-bold">Jannatul Islam</h5>
@@ -397,7 +397,7 @@
           </div>
           <!-- student-3  -->
           <div class="col-lg-3 col-md-6">
-            <div class="shadow-lg">
+            <div class="shadow">
               <img class="w-100" src="./images/student/student-3.png" alt="" />
               <div class="container py-1 m-4">
                 <h5 class="fw-bold">Imran Hossain</h5>
@@ -407,7 +407,7 @@
           </div>
           <!-- student-4  -->
           <div class="col-lg-3 col-md-6">
-            <div class="shadow-lg">
+            <div class="shadow">
               <img class="w-100" src="./images/student/student-4.png" alt="" />
               <div class="container py-1 m-4">
                 <h5 class="fw-bold">Nishi Gomej</h5>
@@ -498,6 +498,9 @@
             <div class="tech-arrow-box-2 d-none d-lg-block">
               <i class="fa-solid fa-circle-chevron-right arrow-icon"></i>
             </div>
+          </div>
+          <div class="d-lg-none mt-5 text-center">
+            <button class="btn tech-btn mx-auto">View All</button>
           </div>
         </div>
       </section>
