--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!------ navbar start  ----->
       <nav class="navbar navbar-expand-lg">
         <div class="container mt-4">
-          <!-- navbar band  -->
+          <!-- navbar brand  -->
           <a class="navbar-brand fs-4 fw-bold" href="#">
             <img style="width: 35px" src="./images/tech.png" alt="" />Tech-Hub
             0.1
@@ -277,8 +277,8 @@
           <button class="btn tech-btn mx-auto">See More Courses</button>
         </div>
       </section>
-      <!-- popular course section end -->
-      <!-- Expolore section section start -->
+      <!------- popular course section end ------->
+      <!------- Expolore section section start ---->
       <section class="container mt-5">
         <div class="row border rounded pl-0 tech-explore-bg">
           <div class="col-lg-6 p-0">
@@ -315,8 +315,8 @@
           </div>
         </div>
       </section>
-      <!----- Expolore section section end ----->
-      <!------ registraion section start ------>
+      <!--------- Expolore section section end ----->
+      <!--------- registraion section start ------>
       <section class="container mt-5">
         <div style="height: 250px" class="row mt-5 tech-register-bg">
           <div class="col-lg-6 text-center my-auto text-white">
@@ -363,8 +363,8 @@
           </div>
         </div>
       </section>
-      <!------ registraion section end ------>
-      <!----- student section start ------>
+      <!--------- registraion section end ------>
+      <!-------- student section start ------>
       <section class="container mt-5">
         <div class="w-50 text-start">
           <h2 class="fs-1 fw-bold">Meet Our Successfull Students</h2>
@@ -395,7 +395,7 @@
               </div>
             </div>
           </div>
-          <!-- student-3  -->
+          <!---- student-3  -->
           <div class="col-lg-3 col-md-6">
             <div class="shadow">
               <img class="w-100" src="./images/student/student-3.png" alt="" />
@@ -420,8 +420,8 @@
           </div>
         </div>
       </section>
-      <!----- student section end ------>
-      <!----- student feedback section  start------>
+      <!----------- student section end ------>
+      <!--------- student feedback section  start------>
       <section class="container mt-5">
         <div class="text-center">
           <h2 class="fs-1 fw-bold">Some Students Feedback</h2>
